--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,8 @@ author_email = brewers@craft-crypto.com
 
 [options]
 packages = find:
-
+package_dir =
+    =CraftCrypto_Helpers
 include_package_data = True
 install_requires =
    kivy
