--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ author_email = brewers@craft-crypto.com
 [options]
 packages = find:
 package_dir =
-    =CraftCrypto_Helpers
+    =src
 include_package_data = True
 install_requires =
    kivy
